--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 
 <head>
   <title>Todo App</title>
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
+    rel="stylesheet">
+  <link rel="stylesheet" 
+    href="style.css" 
+    media="screen" 
+    charset="utf-8">
 </head>
 
 <body>
@@ -16,7 +20,9 @@
     <p id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
     <div class="task-row-wrapper">
-      <input id="new-task" class="task" type="text">
+      <input id="new-task" 
+        class="task" 
+        type="text">
       <button>Add</button></div>
     </p>
     <h3>Todo</h3>
