--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf"
+    <a class="more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
   <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+    <p id="section-for-adding">
       <label for="new-task">Add Item</label>
     <div class="task-row-wrapper">
       <input id="new-task" 
