--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 </head>
 
 <body>
-  <div class="aaa">
+  <div class="main-picture-wrapper">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
-  <div class="centered-main-page-element">
-    <p id="section-for-adding">
-      <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="new-task" 
+  <div class="wrapper">
+    <p id="adding-section">
+      <label for="new-task-input">Add Item</label>
+    <div class="task-adding-wrapper">
+      <input id="new-task-input" 
         class="task" 
         type="text">
       <button>Add</button></div>
     </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <ul id="incompleted-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -36,11 +36,12 @@
           <img src="./remove.svg">
         </button>
       </li>
-      <li class="editMode">
+      <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text"
-          value="Go Shopping" class="task">
+          value="Go Shopping" 
+          class="task">
           <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg">
