--- a/index.html
+++ b/index.html
@@ -13,50 +13,49 @@
 
 <body>
   <div class="main-picture-wrapper">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="main-picture" src="./eisenhower-matrix.jpg">
     <a class="more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
   <div class="wrapper">
-    <p id="adding-section">
-      <label for="new-task-input">Add Item</label>
-    <div class="task-adding-wrapper">
-      <input id="new-task-input" 
-        class="task" 
-        type="text">
-      <button>Add</button></div>
-    </p>
-    <h3>Todo</h3>
+        <label class="new-task-label">Add Item</label>
+      <div class="task-adding-wrapper">
+        <input id="new-task-input" 
+          class="task-input" 
+          type="text">
+        <button class="btn">Add</button>
+      </div>
+    <h3 class="subtitle">Todo</h3>
     <ul id="incompleted-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
+      <li class="task-item">
+        <input class ="checkbox" type="checkbox">
+        <label class="task-label">Pay Bills</label>
+        <input type="text" class="task-input">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img class="delete-img" src="./remove.svg">
         </button>
       </li>
       <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
+        <input class ="checkbox" type="checkbox">
+        <label class="task-label">Go Shopping</label>
         <input type="text"
           value="Go Shopping" 
-          class="task">
+          class="task-input">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img class="delete-img" src="./remove.svg">
           </button>
         </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="subtitle">Completed</h3>
     <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
+      <li class="task-item">
+        <input class ="checkbox" type="checkbox" checked>
+        <label class="task-label">See the Doctor</label>
+        <input type="text" class="task-input">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img src="./remove.svg">
+          <img class="delete-img" src="./remove.svg">
         </button>
       </li>
     </ul>
