--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a class="more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
   <div class="wrapper">
-        <label class="new-task-label">Add Item</label>
+      <h3 class="subtitle">Add Item</h3>
       <div class="task-adding-wrapper">
         <input id="new-task-input" 
           class="task-input" 
@@ -27,7 +27,7 @@
     <h3 class="subtitle">Todo</h3>
     <ul id="incompleted-tasks">
       <li class="task-item">
-        <input class ="checkbox" type="checkbox">
+        <input class="checkbox" type="checkbox">
         <label class="task-label">Pay Bills</label>
         <input type="text" class="task-input">
         <button class="edit">Edit</button>
@@ -41,11 +41,11 @@
         <input type="text"
           value="Go Shopping" 
           class="task-input">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img class="delete-img" src="./remove.svg">
-          </button>
-        </li>
+        <button class="edit">Save</button>
+        <button class="delete">
+          <img class="delete-img" src="./remove.svg">
+        </button>
+      </li>
     </ul>
     <h3 class="subtitle">Completed</h3>
     <ul id="completed-tasks">
