refactor: change 1.2 Multimedia alternative

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="main-picture-wrapper">
-    <img class="main-picture" src="./eisenhower-matrix.jpg">
+    <img class="main-picture" alt="TODO" src="./eisenhower-matrix.jpg">
     <a class="more-info"
       href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
   <div class="wrapper">
@@ -32,7 +32,7 @@
         <input type="text" class="task-input">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img class="delete-img" src="./remove.svg">
+          <img alt="delete" class="delete-img" src="./remove.svg">
         </button>
       </li>
       <li class="edit-mode">
@@ -43,7 +43,7 @@
           class="task-input">
         <button class="edit">Save</button>
         <button class="delete">
-          <img class="delete-img" src="./remove.svg">
+          <img alt="delete" class="delete-img" src="./remove.svg">
         </button>
       </li>
     </ul>
@@ -55,7 +55,7 @@
         <input type="text" class="task-input">
         <button class="edit">Edit</button>
         <button class="delete">
-          <img class="delete-img" src="./remove.svg">
+          <img alt="delete" class="delete-img" src="./remove.svg">
         </button>
       </li>
     </ul>
